# kalos-notification-service

./: .env.example  PROJECT_PLAN.md  README.md  main.py  pyproject.toml  test_real_slack.py  test_slack_integration.py
app/: README.md  __init__.py  exceptions.py  main.py  types.py
app/routers/: README.md  notifications.py
app/services/: README.md  message_formatter.py  slack_client.py
