[project]
name = "kalos-notification-service"
version = "0.0.1"
description = "Slack notification service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openai-agents>=0.0.16",
    "pydantic>=2.11.4",
    "ruff>=0.11.10",
    "slack-sdk>=3.35.0",
]
